Upgrade java apps to Java 17